# openagent

./: .coverage  .coverage.yasir-MacBook-Air_local.pid93547.XAjUqM5x.H6QJEJqiI8Oh  .gitignore  CHANGELOG.md  LICENSE  NOTICE  OPENAGENT.md  README.md  ROADMAP.md  SECURITY.md  coverage.xml  pyproject.toml  setup.bat  setup.ps1  setup.sh
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  baseline-0.1.4.md  multi-agent-weather-demo.md  recovery-provider-transaction.md
examples/weather-map-app/: README.md  app.js  index.html  styles.css
schemas/: event.schema.json  result.schema.json
scripts/: coverage_floors.txt
skills/: README.md
skills/openagent/: SKILL.md
src/openagent/: __init__.py  __main__.py  app.py  config.py
src/openagent/cli/: __init__.py  app.py
src/openagent/core/: __init__.py  cancellation.py  errors.py  events.py  lifecycle.py  models.py  permissions.py  projection.py
src/openagent/credentials/: __init__.py  redaction.py  store.py
src/openagent/providers/: __init__.py  anthropic_messages.py  base.py  discovery.py  factory.py  openai_chat.py  openai_responses.py  transport.py
src/openagent/providers/compat/: __init__.py  profiles.py
src/openagent/reporting/: __init__.py  artifacts.py  openagent_md.py
src/openagent/runtimes/: __init__.py
src/openagent/runtimes/api_agent/: __init__.py  context.py  loop.py
src/openagent/runtimes/cli/: __init__.py  antigravity.py  base.py  claude.py  cli_auth.py  codex.py  generic.py  installations.py  locator.py  model_discovery.py  registry.py  update_policy.py  updates.py
src/openagent/security/: approvals.py  atomic.py  command_policy.py  command_validators.py  execution_backend.py  file_lock.py  git_runner.py  journal.py  process.py  project_code.py
src/openagent/services/: __init__.py  agent_service.py  discovery_service.py  doctor_service.py  model_service.py  preflight.py  project_service.py  provider_service.py  run_event_tailer.py  run_service.py  self_update.py
src/openagent/storage/: __init__.py  db.py  event_log.py  migrations.py  projects.py  repositories.py
src/openagent/tools/: base.py  control.py  exec.py  fs.py  git.py  registry.py
src/openagent/tui/: __init__.py  app.py  markup.py  secret_input.py  wizard_state.py
src/openagent/tui/screens/: __init__.py  add_agent.py  add_provider.py  agent_detail.py  doctor.py  edit_agent.py  lists.py  modals.py  run_console.py  run_view.py
src/openagent/workspaces/: worktree.py
tests/: conftest.py  fakecli.py
tests/contract/: test_anthropic.py  test_nvidia_build.py  test_openai_chat.py  test_responses.py
tests/fixtures/: claude_stream.jsonl  codex_stream.jsonl  codex_usage_limit.jsonl  codex_v0142_edit.jsonl  codex_v0142_failure.jsonl  codex_v0142_plan.jsonl  codex_v0142_websearch.jsonl
tests/fixtures/container/: Dockerfile
tests/integration/: test_api_cancel.py  test_approval_flow.py  test_ask_user_flow.py  test_cancel_no_corruption.py  test_cli_cancel.py  test_cli_credential_delivery.py  test_cli_terminal.py  test_container_sandbox_real.py  test_empty_model_response.py  test_nvidia_live.py  test_orphan_cancel.py  test_probe_persistence.py  test_probe_persistence_cli.py  test_projects_and_event_repair.py  test_reconcile_fault_matrix.py  test_result_schema.py  test_resume.py  test_resume_diff.py  test_resume_lifecycle.py  test_resume_policy.py  test_run_artifact_failures.py  test_run_event_tailer_cross_process.py  test_run_lifecycle.py  test_run_pipeline.py  test_secret_artifacts.py  test_tui_ask_user.py  test_tui_run.py  test_two_projects.py
tests/live/: test_installed_clis.py
tests/security/: test_agent_cas_projection.py  test_cli_credential_isolation.py  test_command_policy_bypasses.py  test_event_export_lock.py  test_event_seq_race.py  test_git_subprocess_isolation.py  test_operation_journal.py  test_project_code_execution.py  test_provider_generation_ownership.py  test_provider_recovery_durability.py  test_provider_secret_scope.py  test_secret_display.py  test_turn_lease_race.py
tests/smoke/: test_smoke.py
tests/unit/: test_agent_service_validation.py  test_antigravity.py  test_api_loop.py  test_approvals.py  test_ask_user.py  test_capability_probe.py  test_cli.py  test_cli_adapters.py  test_cli_lifecycle.py  test_cli_lifecycle_service.py  test_cli_markup_safety.py  test_cli_model_discovery.py  test_cli_stdout_limits.py  test_cli_update_ask_policy.py  test_cli_updates_helpers.py  test_command_policy.py  test_command_policy_escapes.py  test_credentials.py  test_doc_commands.py  test_doctor.py  test_doctor_recovery_states.py  test_entrypoint_errors.py  test_event_export_cost.py  test_event_short_write.py  test_events.py  test_exec_cancellation.py  test_exec_security.py  test_execution_backend.py  test_fs_safety.py  test_git_robustness.py  test_installers.py  test_lifecycle.py  test_managed_process_startup.py  test_markup_safety.py  test_migrations.py  test_nvidia_cli.py  test_openagent_md.py  test_permissions.py  test_process.py  test_projection.py  (+28 more)
