[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagent"
# Single source of truth: the version lives in ``src/openagent/__init__.py`` and hatchling reads it
# from there at build time (see ``[tool.hatch.version]``). ``openagent version`` prints the same
# ``__version__``, so the CLI, the installed distribution metadata, and the wheel can never drift.
dynamic = ["version"]
description = "Local-first control plane for AI APIs, coding CLIs, and autonomous agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Yasir Karaman" }]
keywords = ["ai", "agent", "tui", "cli", "llm", "codex", "claude", "control-plane"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    # Pinned to the tested 8.2.x line: the TUI is pilot-tested against 8.2.8 and a few tests read
    # Select's internal option list (no public accessor exists in this line). Widen only with CI
    # coverage on the new version. See item 12.
    "textual>=8.2,<8.3",
    "typer>=0.12",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "keyring>=25",
    "psutil>=6",
    "jsonschema>=4.22",
    "platformdirs>=4.2",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-psutil",
    "build>=1.2",
]

[project.scripts]
openagent = "openagent.__main__:main"

[project.urls]
Homepage = "https://github.com/yasirkaramandev/openagent"
Repository = "https://github.com/yasirkaramandev/openagent"

[tool.hatch.version]
path = "src/openagent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openagent"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (typer.Option/Argument) as argument defaults.
"src/openagent/cli/app.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["openagent"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that hit live APIs (require API keys in env)",
    "live_cli: tests that invoke a real installed CLI (codex/claude/…)",
]
